--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!--footer-->
       <footer id='footer' >
         <div class="text-center ">
-          <p>Designed with <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://arwazkhan189.github.io/" target="_blank" style="color: black;">Arwaz Khan</a></p>
+          <p>Designed by Anand</p>
         </div>
       </footer>
       <!--footer end-->
