--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!--footer-->
       <footer id='footer' >
         <div class="text-center ">
-          <p>Designed by Anand</p>
+          <p>Designed by Anand and Nikhil</p>
         </div>
       </footer>
       <!--footer end-->
@@ -71,5 +71,5 @@
 
     <!--script file link-->
     <script src="./scripts.js"></script>
-  </body>
+   </body>
 </html>
