--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!--footer-->
       <footer id='footer' >
         <div class="text-center ">
-          <p>Designed by Anand and Nikhil</p>
+          <p>Designed by Anand </p>
         </div>
       </footer>
       <!--footer end-->
